# autoware.universe

latest/control/autoware_obstacle_collision_checker/: index.html
latest/control/autoware_shift_decider/: index.html
latest/control/autoware_trajectory_follower_node/: index.html
latest/localization/autoware_landmark_based_localizer/autoware_lidar_marker_localizer/: index.html
latest/perception/autoware_crosswalk_traffic_light_estimator/: index.html
latest/planning/autoware_costmap_generator/: index.html
latest/planning/autoware_freespace_planner/: index.html
latest/planning/autoware_mission_planner_universe/: index.html
latest/planning/autoware_path_optimizer/: index.html
latest/planning/autoware_path_optimizer/docs/mpt/: index.html
latest/planning/autoware_scenario_selector/: index.html
latest/planning/autoware_surround_obstacle_checker/: index.html
latest/planning/autoware_surround_obstacle_checker/surround_obstacle_checker-design.ja/: index.html
latest/planning/behavior_path_planner/autoware_behavior_path_bidirectional_traffic_module/: index.html
latest/planning/behavior_path_planner/autoware_behavior_path_goal_planner_module/: index.html
latest/planning/behavior_path_planner/autoware_behavior_path_lane_change_module/: index.html
latest/planning/behavior_path_planner/autoware_behavior_path_side_shift_module/: index.html
latest/planning/behavior_path_planner/autoware_behavior_path_start_planner_module/: index.html
latest/planning/behavior_path_planner/autoware_behavior_path_static_obstacle_avoidance_module/: index.html
latest/planning/behavior_velocity_planner/autoware_behavior_velocity_blind_spot_module/: index.html
latest/planning/behavior_velocity_planner/autoware_behavior_velocity_intersection_module/: index.html
latest/planning/behavior_velocity_planner/autoware_behavior_velocity_no_stopping_area_module/: index.html
latest/planning/behavior_velocity_planner/autoware_behavior_velocity_occlusion_spot_module/: index.html
latest/planning/behavior_velocity_planner/autoware_behavior_velocity_run_out_module/: index.html
latest/planning/behavior_velocity_planner/autoware_behavior_velocity_virtual_traffic_light_module/: index.html
latest/planning/motion_velocity_planner/autoware_motion_velocity_boundary_departure_prevention_module/: index.html
latest/search/: search_index.json
latest/sensing/autoware_radar_tracks_noise_filter/: index.html
launch/tier4_perception_launch/: package.xml
launch/tier4_perception_launch/launch/: perception.launch.xml
main/planning/autoware_path_optimizer/: index.html
main/planning/autoware_scenario_selector/: index.html
main/planning/autoware_surround_obstacle_checker/: index.html
main/planning/autoware_surround_obstacle_checker/surround_obstacle_checker-design.ja/: index.html
main/planning/behavior_path_planner/autoware_behavior_path_bidirectional_traffic_module/: index.html
main/planning/behavior_path_planner/autoware_behavior_path_goal_planner_module/: index.html
main/planning/behavior_path_planner/autoware_behavior_path_lane_change_module/: index.html
main/planning/behavior_path_planner/autoware_behavior_path_side_shift_module/: index.html
main/planning/behavior_path_planner/autoware_behavior_path_start_planner_module/: index.html
main/planning/behavior_path_planner/autoware_behavior_path_static_obstacle_avoidance_module/: index.html
main/planning/behavior_velocity_planner/autoware_behavior_velocity_blind_spot_module/: index.html
main/planning/behavior_velocity_planner/autoware_behavior_velocity_crosswalk_module/: index.html
main/planning/behavior_velocity_planner/autoware_behavior_velocity_intersection_module/: index.html
main/search/: search_index.json
main/sensing/autoware_radar_tracks_noise_filter/: index.html
perception/autoware_tensorrt_bevformer/: CMakeLists.txt  README.md  README_main.md  README_testing.md  package.xml
perception/autoware_tensorrt_bevformer/TensorRT/: README.md
perception/autoware_tensorrt_bevformer/TensorRT/common/: checkMacrosPlugin.cpp  checkMacrosPlugin.h  cuda_helper.cu  cuda_helper.h  cuda_int8.h  helper.h  serialize.h
perception/autoware_tensorrt_bevformer/TensorRT/plugin/modulated_deformable_conv2d/: modulatedDeformableConv2dKernel.cu  modulatedDeformableConv2dKernel.h  modulatedDeformableConv2dPlugin.cpp  modulatedDeformableConv2dPlugin.h
perception/autoware_tensorrt_bevformer/TensorRT/plugin/multi_scale_deformable_attn/: multiScaleDeformableAttnKernel.cu  multiScaleDeformableAttnKernel.h  multiScaleDeformableAttnPlugin.cpp  multiScaleDeformableAttnPlugin.h
perception/autoware_tensorrt_bevformer/TensorRT/plugin/rotate/: rotateKernel.cu  rotateKernel.h  rotatePlugin.cpp  rotatePlugin.h
perception/autoware_tensorrt_bevformer/config/: bevformer.param.yaml
perception/autoware_tensorrt_bevformer/include/autoware/tensorrt_bevformer/: bevformer_data_loader.hpp  bevformer_data_manager.hpp  bevformer_inference_engine.hpp  bevformer_node.hpp  bevformer_preprocessor.hpp  marker_util.hpp  ros_utils.hpp
perception/autoware_tensorrt_bevformer/include/autoware/tensorrt_bevformer/postprocessing/: postprocessing.hpp
perception/autoware_tensorrt_bevformer/include/autoware/tensorrt_bevformer/preprocessing/: augmentation_transforms.hpp  data_types.hpp  multi_scale_flip_aug_3d.hpp  normalize_multiview_image.hpp  preprocessing_pipeline.hpp  transforms.hpp
perception/autoware_tensorrt_bevformer/include/autoware/tensorrt_bevformer/utils/: eigen_cv_conversions.hpp
perception/autoware_tensorrt_bevformer/launch/: bevformer.launch.xml
perception/autoware_tensorrt_bevformer/src/: bevformer_data_loader.cpp  bevformer_data_manager.cpp  bevformer_inference_engine.cpp  bevformer_node.cpp  bevformer_preprocessor.cpp  marker_utils.cpp  ros_utils.cpp
perception/autoware_tensorrt_bevformer/src/postprocessing/: postprocessing.cpp
perception/autoware_tensorrt_bevformer/src/preprocessing/: augmentation_transforms.cpp  compose.cpp  multi_scale_flip_aug_3d.cpp  normalize_multiview_image.cpp  preprocessing_pipeline.cpp
(+18 files in other folders)
